# Messenger

./: .gitignore  CMakeLists.txt
client/src/: main.cpp
common/: Database.h  Logger.h  PasswordHash.h  Protocol.h
qt_client/: CMakeLists.txt  style.сss
qt_client/src/: IdGenerator.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MessengerClient.cpp  MessengerClient.h  main.cpp
server/src/: main.cpp
